"Record animation" curve shows incorrect slope #43174

Closed
opened 2015-01-09 11:32:05 +01:00 by inactive account · 5 comments

System Information
Ubuntu 14.10

Blender Version
Broken: tested on 2.69 and 2.73, both are broken
Worked: unknown

Short description of error
After recording an animation in the BGE, the recorded curve shows slope=0 for each control point:
snapshot1.png

However, the correct slope is stored (but not shown). You can force an update by selecting a single point and trying to rotate it. As soon as the rotation action starts, all control points snap to the correct slope. You can now cancel the rotation, and everything is correct:
snapshot2.png

Exact steps for others to reproduce the error

  • Open the attached blend file game_engine_record_anim_slope.blend
  • Press P to start the game engine, see the cube fall.
  • Press ESC to stop.
  • Select the cube to show the recorded animation (the cube was already selected, so the fact that this is necessary may also constitute a bug).
  • The animation curve control points only show horizontal slope lines
  • Select a control point, press R and move the mouse

See all control points snap to their correct slope


**System Information** Ubuntu 14.10 **Blender Version** Broken: tested on 2.69 and 2.73, both are broken Worked: unknown **Short description of error** After recording an animation in the BGE, the recorded curve shows slope=0 for each control point: ![snapshot1.png](https://archive.blender.org/developer/F136316/snapshot1.png) However, the correct slope is stored (but not shown). You can force an update by selecting a single point and trying to rotate it. As soon as the rotation action starts, all control points snap to the correct slope. You can now cancel the rotation, and everything is correct: ![snapshot2.png](https://archive.blender.org/developer/F136318/snapshot2.png) **Exact steps for others to reproduce the error** - Open the attached blend file [game_engine_record_anim_slope.blend](https://archive.blender.org/developer/F136320/game_engine_record_anim_slope.blend) - Press P to start the game engine, see the cube fall. - Press ESC to stop. - Select the cube to show the recorded animation (the cube was already selected, so the fact that this is necessary may also constitute a bug). - The animation curve control points only show horizontal slope lines - Select a control point, press R and move the mouse # See all control points snap to their correct slope ``` ```

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @sybrenstuvel

Added subscriber: @sybrenstuvel
Bastien Montagne self-assigned this 2015-01-09 14:19:43 +01:00

This issue was referenced by 1187b98d48

This issue was referenced by 1187b98d4849572932b159462d1da610c89cd77c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1187b98d48.

Closed by commit 1187b98d48.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43174
No description provided.